=== rmw ChangeLog ===

2019-07-20

  * BUGFIX: (severity: low) Some calls to strncat() where an incorrect
  value was used, which could potentially cause a string to get
  truncated to an undesirable length
  <https://github.com/theimpossibleastronaut/rmw/issues/257>.

2019-07-16

  * The value written to the "lastpurge" file is no longer the day of
  the month, but the time since the Epoch (00:00:00 UTC, January 1,
  1970), measured in seconds (see ticket #238 for more info).

2019-07-09

  * release version 0.7.02

2019-07-03

  * Feature change: Emptying the waste folders is now done with the
  -e,--empty option

  * [#241](https://github.com/theimpossibleastronaut/rmw/issues/241)The
  translated man pages have been removed.

2019-06-27

  * BUGFIX:
  [#235](https://github.com/theimpossibleastronaut/rmw/issues/235)on
  some systems, purge would fail to run when requested, 'make check'
  failed. This was reported to happen on Manjaro and Arch.

2019-06-21

  * BUGFIX:
  [#233](https://github.com/theimpossibleastronaut/rmw/issues/233)missing
  output when purge is attempted without force

  * The configuration option 'force_not_required' has been replaced
  with 'force_required'

  * purge can run without -f/--force by default; however, you can still use
  "force_required" if you'd rather require '-f' to allow purge.

2019-06-13

  * On OpenBSD, setting MENU_LIBS when running configure is no longer
  required. Thanks to
  [@Jammyjamjamman](https://github.com/Jammyjamjamman) for encouraging
  me to do this and for helping to test.

2019-05-04

  * 'Make distcheck' fixed.

  * Dummy test files (test/somefiles) are now created when 'make check'
  is run, and not included with the distribution.

2018-12-14

  * Using "make check" from the build directory will execute the test
  scripts now. "make test-all, test-basic, etc" have been deprecated.

2018-12-12

  * When Restore() is called from main(), rmw will leave a return