@@ -1,4 +1,4 @@
-.TH RMW 1 2019-07-03
+.TH RMW 1 2019-07-21
 .SH NAME
 rmw - remove files, safely
 .SH SYNOPSIS
@@ -41,9 +41,6 @@ completely empty (purge) all waste folders
 .TP
 \fB\-h \-\-help\fR
 Display a help screen and exit.
-.TP
-\fB\-t \-\-translate\fR
-Display a translation of the configuration file
 .TP
 \fB\-l \-\-list\fR
 List waste directories.
